# quant-finance-python-cookbook

./: CLAUDE.md  README.md  pyproject.toml
benchmarks/: vectorized_vs_loops.py
examples/: options_pricing_demo.py  portfolio_analysis.py
patterns/: __init__.py  portfolio.py  pricing.py  returns.py  risk_metrics.py
tests/: test_portfolio.py  test_pricing.py  test_returns.py  test_risk_metrics.py
